<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Main activity -->
    <string name="app_name">OBDZero</string>

    <string name="toast_connection_lost" tools:keep="@string/toast_connection_lost">Device connection was lost</string>

    <string name="frag_button_1">Info</string>
    <string name="frag_button_2">Cells</string>
    <string name="frag_button_3">OBD</string>
    <string name="frag_button_4">Watts</string>
    <string name="frag_button_5">Drive</string>


    <string name="distance_title">Distance to the next charging station</string>
    <string name="distance_value">0</string>
    <string name="distance_units">km</string>
    <string name="margin_title">Range minus the distance to the station</string>
    <string name="margin_value">20</string>
    <string name="speed_title">Suggested speed to the station</string>
    <string name="speed_value">90</string>
    <string name="speed_units">km/h</string>

    <string name="watts_title">Average watts at the average speed</string>
    <string name="watts_value">0</string>
    <string name="watts_units">kW</string>
    <string name="whkm_title">Average watts divided by the average speed </string>
    <string name="whkm_value">120</string>
    <string name="whkm_units">Wh/km</string>
    <string name="watts_speed">20</string>
    <string name="kmh_title">Average speed while the car is in drive</string>

    <!-- Options Menu -->
    <string name="cecil_home">Download the user manual at OBDZero.dk </string>
    <string name="cecil_email">or contact davidcecil@outlook.dk</string>
    <string name="alert_dialog_ok">OK</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Please pair these devices using phone settings before starting this app</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Standard values for calculations -->
    <string name="initial_values">Values needed for calculations:</string>
    <string name="initial_speed">True speed when car shows 100 (km/h or mph):</string>
    <string name="initial_margin">Preferred remaining km at the next charging station:</string>
    <string name="initial_load">Load in the car kg:</string>
    <string name="initial_range">Rest range shown on the instrument panel, is it km or miles?</string>
    <string name="initial_odo">Odometer shown on the OBD screen, is it in km or miles?</string>
    <string name="button_km_miles">km</string>
    <string name="button_update">update</string>


    <!-- Don't localize these default values -->
    <string name="car_about">car</string>
    <string name="toggle_secure">secure connections only</string>
    <string name="toggle_button"><![CDATA[<>]]></string>

</resources>
