<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Suspicious0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2533"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <TextView
            android:id="@+id/text_watts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="end|center"
            android:padding="6dip"
            android:text="@string/watts_value"
            android:textColor="#ffffff"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/text_units"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:focusable="false"
            android:gravity="start|center"
            android:text="@string/watts_units"
            android:textSize="26sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:focusable="false"
        android:padding="5dp"
        android:text="@string/watts_title"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2533"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <TextView
            android:id="@+id/text_whkm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:focusable="false"
            android:gravity="end|center"
            android:padding="6dip"
            android:text="@string/whkm_value"
            android:textColor="#ffffff"
            android:textSize="90sp" />

        <Button
            android:id="@+id/whkm_units"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="start|center"
            android:text="@string/whkm_units"
            android:textColor="#ffffff"
            android:textSize="26sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:focusable="false"
        android:padding="5dp"
        android:text="@string/whkm_title"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2533"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <TextView
            android:id="@+id/text_speedavg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:focusable="false"
            android:gravity="end|center"
            android:padding="6dip"
            android:text="@string/watts_speed"
            android:textColor="#ffffff"
            android:textSize="90sp" />

        <Button
            android:id="@+id/speedavg_units"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="start|center"
            android:text="@string/speed_units"
            android:textColor="#ffffff"
            android:textSize="26sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:focusable="false"
        android:padding="5dp"
        android:text="@string/kmh_title"
        android:textSize="14sp" />

</LinearLayout>