<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/car_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dip"
            android:paddingEnd="30dip"
            android:paddingBottom="30dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dip"
            android:paddingEnd="30dip"
            android:paddingBottom="30dip"
            android:text="@string/cecil_home" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dip"
            android:paddingEnd="30dip"
            android:paddingBottom="30dip"
            android:text="@string/cecil_email" />

        <Button
            android:id="@+id/buttonDialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_ok" />

    </LinearLayout>

</ScrollView>